test/SIL/Parser/errors.sil
// RUN: %swift %s -emit-sil -verify

var dummy : Int

sil @block_errors : $() -> () {
bb0:
  %0 = tuple ()
  %1 = return %0 : $()
bb0:                      // expected-error {{redefinition of basic block 'bb0'}}
  %3 = return %0 : $()
}

sil @local_value_errors : $() -> () {
bb0:
  %0 = tuple ()
  %0 = tuple ()           // expected-error {{redefinition of value '%0'}}
  %1 = tuple (%0 : $(), %0 : $(Int))  // expected-error {{value '%0' defined with mismatching type '$()'}}
  %2 = tuple (%199 : $())  // expected-error {{use of undefined value '%199'}}
}
